--- a/index.html
+++ b/index.html
@@ -3,21 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lionel Messi</title>
     <link rel="icon" type="image/x-icon" href="messi.ico">
+    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Lionel Messi - The Greatest of All Time (GOAT)">
+    <meta name="keywords" content="Lionel Messi, Football, Soccer, GOAT, Ballon d'Or, Inter Miami, Argentina">
+    <meta name="author" content="Author Name">
 </head>
-<h1>Lional Messi</h1>
 <body>
-    <h1 style="background-color:rgb(40, 156, 205);">Argentinian</h1>
-<p style="background-color:rgb(169, 21, 112);">GOAT</p>
-
-    <p>Lionel Andrés "leo" Messi is an Argentine professional footballer who plays as a forward for and captains both Major League Soccer club Inter Miami and the Argentina national team
-
-    </p>
-    <p> Widely regarded as one of the greatest players of all time, Messi has won a record eight Ballon d'Or awards, a record six European Golden Shoes, and was named the world's best player for a record eight times by FIFA.[note 2] He has won a record 45 trophies in his career. Until 2021, he had spent his entire professional career with Barcelona, where he won a club-record 34 trophies, including ten La Liga titles, seven Copa del Rey titles, and the UEFA Champions League four times. With his country, he won the 2021 Copa América, the 2024 Copa América and the 2022 FIFA World Cup. A prolific goalscorer and creative playmaker, Messi holds the records for most goals (474), hat-tricks (36), and assists (192) in La Liga, most appearances (36) and assists (18) in the Copa América. He has the most international goals (109) and appearances (187) by a South American male. Messi has scored over 800 senior career goals for club and country, and the most goals for a single club (672).
-
-    </p>
-    <img src="Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg (1) - Copy.webp">
-
+    <header>
+        <h1>Lionel Messi</h1>
+        <h2>The GOAT</h2>
+    </header>
+    <main>
+        <form action="/submit" method="post" autocomplete="on" novalidate>
+            <fieldset>
+                <legend>Personal Information</legend>
+                <label for="fname">First name:</label><br>
+                <input type="text" id="fname" name="fname" value="Lionel" required><br>
+                <label for="lname">Last name:</label><br>
+                <input type="text" id="lname" name="lname" value="Messi" required><br>
+            </fieldset>
+        </form>
+        <article>
+            <section>
+                <h3>About Lionel Messi</h3>
+                <p>Lionel Andrés "Leo" Messi is an Argentine professional footballer who plays as a forward for and captains both Major League Soccer club Inter Miami and the Argentina national team.</p>
+            </section>
+            <section>
+                <h3>Achievements</h3>
+                <p>Widely regarded as one of the greatest players of all time, Messi has won a record eight Ballon d'Or awards, a record six European Golden Shoes, and was named the world's best player for a record eight times by FIFA.</p>
+                <p>He has won a record 45 trophies in his career. Until 2021, he had spent his entire professional career with Barcelona, where he won a club-record 34 trophies, including ten La Liga titles, seven Copa del Rey titles, and the UEFA Champions League four times. With his country, he won the 2021 Copa América, the 2024 Copa América and the 2022 FIFA World Cup. A prolific goalscorer and creative playmaker, Messi holds the records for most goals (474), hat-tricks (36), and assists (192) in La Liga, most appearances (36) and assists (18) in the Copa América. He has the most international goals (109) and appearances (187) by a South American male. Messi has scored over 800 senior career goals for club and country, and the most goals for a single club (672).</p>
+            </section>
+            <section>
+                <h3>Notable Wins</h3>
+                <ul>
+                    <li>Won the World Cup in 2022</li>
+                    <li>Won the Copa América in 2021 and 2024</li>
+                    <li>Has won 8 Ballon d'Ors</li>
+                </ul>
+            </section>
+        </article>
+        <figure>
+            <img src="Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg (1) - Copy.webp" alt="Lionel Messi with the Argentina National Team">
+            <figcaption>Lionel Messi with the Argentina National Team</figcaption>
+        </figure>
+    </main>
+  
 </body>
 </html>
