--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
             <figcaption>Lionel Messi with the Argentina National Team</figcaption>
         </figure>
     </main>
-  <script src="script.js"async defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
